# segmented-proxy

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
docs/: ABOUT_THIS_PROJECT.md  ADVANCED_TCP_BEHAVIOR.md  ARCHITECTURE.md  DNS_RESOLUTION.md  EXPERIMENTS.md  FAQ.md  GLOSSARY.md  HOW_A_PROXY_WORKS.md  HTTP_VS_HTTPS.md  LABS.md  LEARNING_PATH.md  PROJECT_GOALS.md  PROJECT_STRUCTURE.md  SEGMENTATION.md  TROUBLESHOOTING.md  commands.md  index.md
examples/: EXPERIMENTS.md  rules.txt
legacy/: proxy_legacy.py
src/segmentedproxy/: app.py  config.py  handlers.py  http.py  main.py  net.py  policy.py  proxy.py  proxy_legacy.py  resolver.py  segmentation.py  server.py  tunnel.py
src/segmentedproxy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/: helpers.py  test_access_log.py  test_chunked.py  test_cli_validate_rules.py  test_http.py  test_http_body_segmentation.py  test_integration_http.py  test_integration_https_connect.py  test_plain_dns_resolver_parsing.py  test_plain_dns_resolver_transport.py  test_policy.py  test_resolver_cache.py  test_rules_file.py  test_segmentation.py  test_tunnel.py
