[project]
name = "segmentedproxy"
version = "0.1.0"
description = "A lightweight educational HTTPS proxy with optional segmentation strategies"
authors = [{ name = "Amirpooyan Raeessi" }]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
segproxy = "segmentedproxy.main:main"