[project]
name = "segmentedproxy"
version = "0.2.0"
description = "A lightweight educational HTTPS proxy with optional segmentation strategies"
authors = [{ name = "Amirpooyan Raeessi" }]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
segproxy = "segmentedproxy.main:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py310"]
